# modufur

./: .gitignore  LICENSE  Pipfile  README.md  config.py  modufur.service  pyproject.toml  run.py
.github/: FUNDING.yml
commands/: booru.py  help.py  master.py  music.py
src/: run.py
src/cogs/: booru.py  help.py  info.py  management.py  music.py  owner.py  periodic.py  tools.py  weeb.py
src/main/: restart.py  run.py
src/main/build (1)/run/: out00-Analysis.toc  out00-COLLECT.toc  out00-EXE.toc  out00-PKG.pkg  out00-PKG.toc  out00-PYZ.pyz  out00-PYZ.toc  run  warnrun.txt  xref-run.html
src/main/cogs/: booru.py  info.py  management.py  owner.py  periodic.py  tools.py
src/main/misc/: checks.py  exceptions.py
src/main/utils/: formatter.py  scraper.py  utils.py
src/misc/: checks.py  exceptions.py
src/test/utils/: formatter.py
src/utils/: formatter.py  scraper.py  utils.py
tools/: components.py  scraper.py
