[tool.poetry]
name = "modufur"
version = "0.1.0"
description = "Modufur Discord Bot"
authors = ["Myned <dev@bjork.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
toml = "*"
uvloop = "*"
aiohttp = "*"
urlextract = "*"
tldextract = "*"
hikari = {extras = ["speedups"], version = "*"}
hikari-lightbulb = "*"
hikari-miru = "*"
songbird-py = "*"
youtube-search-python = "*"
pysaucenao = {git = "https://github.com/FujiMakoto/pysaucenao.git"}

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
